<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Report The Crime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="password">Password</string>
    <string name="emailaddress">Email Address</string>
    <string name="signin">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="signup">Sign Up</string>
    <string name="ID">No. KTP</string>
    <string name="nama">Nama Lengkap</string>
    <string name="alamat">Alamat Lengkap</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="no_ktp">No. KTP</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Location From GPS</string>
    <string name="str_tv_location">Lokasi Sekarang</string>
    <string name="no_hp">No. Handphone</string>
    <string name="save">Save</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
</resources>
