<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/signin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textUsername"
        android:layout_below="@+id/textUsername"
        android:ems="15"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editUsername"
        android:layout_below="@+id/editUsername"
        android:layout_marginTop="18dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textPassword"
        android:layout_alignRight="@+id/editUsername"
        android:layout_below="@+id/textPassword"
        android:ems="15"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/btnSignIn"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editPassword"
        android:layout_below="@+id/editPassword"
        android:layout_marginTop="22dp"
        android:background="@drawable/flat_selector"
        android:textColor="@android:color/white"
        android:text="@string/signin" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSignIn"
        android:layout_alignBottom="@+id/btnSignIn"
        android:layout_alignLeft="@+id/editPassword"
        android:background="@drawable/flat_selector"
        android:textColor="@android:color/white"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCancel"
        android:layout_below="@+id/btnCancel"
        android:layout_marginTop="46dp"
        android:text="@string/signup"
        android:textColor="@android:color/holo_blue_dark" />

</RelativeLayout>
